--- a/new.html
+++ b/new.html
@@ -7,6 +7,26 @@
     <title>New Releases</title>
 </head>
 <body>
+    <div id="wrapper">
+        <header>
+            <div id="top_menubox" style="background-color: red;">
+                 <div id="logo_jodon" style="background-color: blue; width:10px; height:10px;"></div>
+                 <div id="top_menu">
+                      <a href="">고객센터</a> |
+                      <a href="">멤버가입</a> |
+                      <a href="">로그인</a>    
+                      <a href="">로그인</a>             
+                 </div>
+            </div>
+        </header>
+        <article>
+
+        </article>
+        <footer>
+
+        </footer>
+
+    </div>
         
 </body>
 </html>
