aside 부분 작업중

--- a/NikeMen_index.html
+++ b/NikeMen_index.html
@@ -5,8 +5,53 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>나이키 남성</title>
+
+    <link rel="stylesheet" href="./css/NikeMen.css">
 </head>
 <body>
     
+    <header>
+        <h1>나이키 맨</h1>
+    </header>
+
+    <div class="container">
+        <!-- 왼쪽 사이드 -->
+        <aside class="side">
+            <h2>Men's 의류</h2>
+            <ul>
+                <li><strong>의류 전체</strong></li>
+                <li>후디 & 크루</li>
+                <li>팬츠 & 타이츠</li>
+                <li>탑 & 티셔츠</li>
+                <li>재킷 & 베스트</li>
+                <li>숏 팬츠</li>
+                <li>나이키 프로</li>
+                <li>양말</li>
+                <li>셋업</li>
+            </ul>
+        </aside>
+
+        <!-- 본문 영역 -->
+        <article class="main">
+            <h2>TITLE HEADING</h2>
+            <h2>Title description, 2021-03-11</h2>
+            <div class="fakeimg" style="height: 200px;">Image</div>
+            <p>Some text...</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae laborum mollitia</p>
+
+            <br>
+
+            <h2>TITLE HEADING 2</h2>
+            <h2>Title description, 2021-03-12</h2>
+            <div class="fakeimg" style="height: 200px;">Image</div>
+            <p>Some text...</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae laborum mollitia</p>
+        </article>
+    </div>
+
+    <footer>
+        <h2>Footer</h2>
+    </footer>
+
 </body>
 </html>
