--- a/NikeMen_index.html
+++ b/NikeMen_index.html
@@ -9,25 +9,28 @@
     <link rel="stylesheet" href="./css/NikeMen.css">
 </head>
 <body>
+
+    <div id="notice">
+        <h4 style="text-align: center;">Resize the browser window</h4>
+    </div>
     
     <header>
-        <h1>나이키 맨</h1>
+        <h2>Men's 의류</h2>
     </header>
 
     <div class="container">
         <!-- 왼쪽 사이드 -->
         <aside class="side">
-            <h2>Men's 의류</h2>
             <ul>
-                <li><strong>의류 전체</strong></li>
-                <li>후디 & 크루</li>
-                <li>팬츠 & 타이츠</li>
-                <li>탑 & 티셔츠</li>
-                <li>재킷 & 베스트</li>
-                <li>숏 팬츠</li>
-                <li>나이키 프로</li>
-                <li>양말</li>
-                <li>셋업</li>
+                <li><a href=""><strong>의류 전체</strong></a></li>
+                <li><a href="">후디 & 크루</a></li>
+                <li><a href="">팬츠 & 타이츠</a></li>
+                <li><a href="">탑 & 티셔츠</a></li>
+                <li><a href="">재킷 & 베스트</a></li>
+                <li><a href="">숏 팬츠</a></li>
+                <li><a href="">나이키 프로</a></li>
+                <li><a href="">양말</a></li>
+                <li><a href="">셋업</a></li>
             </ul>
         </aside>
 
