폴더명 _hong으로 변경

--- a/NikeMen_index.html
+++ b/NikeMen_index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>나이키 남성</title>
 
-    <link rel="stylesheet" href="./css/NikeMen.css">
+    <link rel="stylesheet" href="./css_hong/NikeMen.css">
 </head>
 <body>
 
     <div id="notice">
-        <img id="logo" src="./image/nike_logo.png" alt="nike_logo">        
+        <img id="logo" src="./image_hong/nike_logo.png" alt="nike_logo">        
     </div>
     
     <header>
@@ -39,7 +39,7 @@
         <article class="main">
 
             <div class="product">
-                <img src="./image/img01.jpg" alt="img01">
+                <img src="./image_hong/img01.jpg" alt="img01">
                 <p class="productName">나이키 스포츠웨어 리바이벌</p>
                 <p class="productPrice">139,000원</p>
                 <p style="color: grey;">남성 경량 우븐 재킷 AS</p>
@@ -48,7 +48,7 @@
             </div>
 
             <div class="product">
-                <img src="./image/img02.jpg" alt="img02">
+                <img src="./image_hong/img02.jpg" alt="img02">
                 <p class="productName">나이키 스포츠웨어 클럽 카모</p>
                 <p class="productPrice">79,000원</p>
                 <p style="color: grey;">남성 프렌치 테리 후디 긴팔 탑 AS</p>
@@ -56,7 +56,7 @@
             </div>
 
             <div class="product">
-                <img src="./image/img03.jpg" alt="img03">
+                <img src="./image_hong/img03.jpg" alt="img03">
                 <p class="productName">나이키 스포츠웨어 워시드 리바이벌 저지</p>
                 <p class="productPrice">119,000원</p>
                 <p style="color: grey;">남성 저지 팬츠 AS</p>
@@ -64,7 +64,7 @@
             </div>
 
             <div class="product">
-                <img src="./image/img04.jpg" alt="img04">
+                <img src="./image_hong/img04.jpg" alt="img04">
                 <p class="productName">조던 플라이트</p>
                 <p class="productPrice">139,000원</p>
                 <p style="color: grey;">남성 수트 재킷 AS</p>
@@ -72,7 +72,7 @@
             </div>
 
             <div class="product">
-                <img src="./image/img05.jpg" alt="img05">
+                <img src="./image_hong/img05.jpg" alt="img05">
                 <p class="productName">나이키 스포츠웨어 BLFD</p>
                 <p class="productPrice">69,000원</p>
                 <p style="color: grey;">남성 프렌치 테리 팬츠 AS</p>
@@ -80,7 +80,7 @@
             </div>
 
             <div class="product">
-                <img src="./image/img06.jpg" alt="img06">
+                <img src="./image_hong/img06.jpg" alt="img06">
                 <p class="productName">나이키 스포츠웨어 스테이트먼트 HBR</p>
                 <p class="productPrice">149,000원</p>
                 <p style="color: grey;">남성 우븐 재킷 AS</p>
@@ -88,7 +88,7 @@
             </div>
 
             <div class="product">
-                <img src="./image/img07.jpg" alt="img07">
+                <img src="./image_hong/img07.jpg" alt="img07">
                 <p class="productName">조던 플라이트</p>
                 <p class="productPrice">109,000원</p>
                 <p style="color: grey;">남성 그래픽 플리스 크루 스웻셔츠 AS</p>
@@ -96,7 +96,7 @@
             </div>
 
             <div class="product">
-                <img src="./image/img08.jpg" alt="img08">
+                <img src="./image_hong/img08.jpg" alt="img08">
                 <p class="productName">나이키 스포츠웨어 프리미엄 에센셜 니트</p>
                 <p class="productPrice">109,000원</p>
                 <p style="color: grey;">남성 반팔 티셔츠 AS</p>
@@ -104,7 +104,7 @@
             </div>
 
             <div class="product">
-                <img src="./image/img09.jpg" alt="img09">
+                <img src="./image_hong/img09.jpg" alt="img09">
                 <p class="productName">나이키 스포츠웨어 JDI LBR</p>
                 <p class="productPrice">45,000원</p>
                 <p style="color: grey;">남성 반팔 티셔츠 AS</p>
@@ -112,7 +112,7 @@
             </div>
 
             <div class="product">
-                <img src="./image/img10.jpg" alt="img10">
+                <img src="./image_hong/img10.jpg" alt="img10">
                 <p class="productName">나이키 스포츠웨어 매치업 피케</p>
                 <p class="productPrice">49,000원</p>
                 <p style="color: grey;">남성 폴로 AS</p>
@@ -120,7 +120,7 @@
             </div>
 
             <div class="product">
-                <img src="./image/img11.jpg" alt="img11">
+                <img src="./image_hong/img11.jpg" alt="img11">
                 <p class="productName">나이키 스포츠웨어 카모</p>
                 <p class="productPrice">65,000원</p>
                 <p style="color: grey;">남성 쇼츠 AS</p>
@@ -128,7 +128,7 @@
             </div>
 
             <div class="product">
-                <img src="./image/img12.jpg" alt="img12">
+                <img src="./image_hong/img12.jpg" alt="img12">
                 <p class="productName">나이키 부산 시티</p>
                 <p class="productPrice">45,000원</p>
                 <p style="color: grey;">남성 반팔 티셔츠 AS</p>
@@ -139,7 +139,15 @@
     </div>
 
     <footer>
-        <h2>Footer</h2>
+        <div>
+            <p>매장안내</p>
+            <p>나이키 트레이닝 가이드</p>
+            <p>로그인</p>
+            <p>멤버 가입</p>
+        </div>
+        <div></div>
+        <div></div>
+        <div></div>
     </footer>
 
 </body>
