3월23일 마지막 커밋

--- a/NikeMen_index.html
+++ b/NikeMen_index.html
@@ -11,7 +11,9 @@
 <body>
 
     <div id="notice">
-        <img id="logo" src="./image_hong/nike_logo.png" alt="nike_logo">        
+        <img id="logo" src="./image_hong/nike_logo.png" alt="nike_logo">
+        <img src="./image_hong/icon_search.png" alt="icon_search">
+        <input type="text" placeholder="검색" style="padding: 12px;">
     </div>
     
     <header>
@@ -139,7 +141,7 @@
     </div>
 
     <footer>
-        <div>
+        <div class="footer_div1">
             <p>매장안내</p>
             <p>나이키 트레이닝 가이드</p>
             <p>로그인</p>
