--- a/index.html
+++ b/index.html
@@ -1,32 +1,223 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../css_lee/index.css" type="text/css">
+    <script src="../js_lee/index.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
+    <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
 </head>
-<body>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    
-    안녕하세요
-    안녕하세요
+
+<body onload="loaded()">
+    <div id="container">
+        <header>
+            <a href="#"><img id="jordon_logo" src="../image_lee/index_icon/index_jordon.png" alt="jordon"></a>
+            <ul>
+                <li><a href="#">고객센터</a></li>|
+                <li><a href="#">멤버 가입</aa>
+                </li>|
+                <li><a href="#">로그인</a></li>
+            </ul>
+        </header>
+        <nav>
+            <a href="#"><img id="nike_logo" src="../image_lee/index_icon/index_nike_logo.png" alt="nike"></a>
+
+            <ul>
+                <li><a href="#">New Releases</a></li>
+                <li><a href="#">Men</a></li>
+                <li><a href="#">Women</a></li>
+                <li><a href="#">Kids</a></li>
+                <li><a href="#">Sale</a></li>
+            </ul>
+            <a href="#">
+                <span style="background-color: gray; width: 100px; display: inline-block;">
+                    <img class="icon" src="../image_lee/index_icon/index_search_icon.png" alt="search">
+                </span>
+            </a>
+            <a href="#"><img src="../image_lee/index_icon/index_favorite_icon.png" alt="favorite" class="icon"></a>
+            <a href="#"><img src="../image_lee/index_icon/index_briefcase_icon.png" alt="basket" class="icon"></a>
+        </nav>
+        <div id="navigationFlow">
+            
+        </div>
+        <article>
+            <div>
+                <div id="carouselFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-indicators">
+                            <button type="button" data-bs-target="#carouselFade" data-bs-slide-to="0" class="active"
+                                aria-current="true" aria-label="Slide 1"></button>
+                            <button type="button" data-bs-target="#carouselFade" data-bs-slide-to="1"
+                                aria-label="Slide 2"></button>
+                            <button type="button" data-bs-target="#carouselFade" data-bs-slide-to="2"
+                                aria-label="Slide 3"></button>
+                            <button type="button" data-bs-target="#carouselFade" data-bs-slide-to="3"
+                                aria-label="Slide 4"></button>
+                            <button type="button" data-bs-target="#carouselFade" data-bs-slide-to="4"
+                                aria-label="Slide 5"></button>
+                            <button type="button" data-bs-target="#carouselFade" data-bs-slide-to="5"
+                                aria-label="Slide 6"></button>
+                            <button type="button" data-bs-target="#carouselFade" data-bs-slide-to="6"
+                                aria-label="Slide 7"></button>
+                        </div>
+                        <div class="carousel-item active" data-bs-interval="3000">
+                            <img src="../image_lee/index_image/index_nike_nss_swipper_01.jpg" class="d-block w-100"
+                                alt="...">
+                        </div>
+                        <div class="carousel-item" data-bs-interval="3000">
+                            <img src="../image_lee/index_image/index_nike_nss_swipper_02.jpg" class="d-block w-100"
+                                alt="...">
+                        </div>
+                        <div class="carousel-item" data-bs-interval="3000">
+                            <img src="../image_lee/index_image/index_nike_nss_swipper_03.jpg" class="d-block w-100"
+                                alt="...">
+                        </div>
+                        <div class="carousel-item" data-bs-interval="3000">
+                            <img src="../image_lee/index_image/index_nike_nss_swipper_04.jpg" class="d-block w-100"
+                                alt="...">
+                        </div>
+                        <div class="carousel-item" data-bs-interval="3000">
+                            <img src="../image_lee/index_image/index_nike_nss_swipper_05.jpg" class="d-block w-100"
+                                alt="...">
+                        </div>
+                        <div class="carousel-item" data-bs-interval="3000">
+                            <img src="../image_lee/index_image/index_nike_nss_swipper_06.jpg" class="d-block w-100"
+                                alt="...">
+                        </div>
+                        <div class="carousel-item" data-bs-interval="3000">
+                            <img src="../image_lee/index_image/index_nike_nss_swipper_07.jpg" class="d-block w-100"
+                                alt="...">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselFade"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselFade"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
+            <div>
+                <h2>2021 S/S Season Best</h2>
+                <div>
+                    <img src="../image_lee/index_image/index_main_product02.jpg" alt="" class="main-image">
+                </div>
+                <div style="text-align: center;">
+                    <h1>나이키 에어 베이퍼맥스 EVO</h1>
+                    <p>클래식한 에어맥스 시리즈를 리믹스하여<br>더욱 볼드해진 나이키 에어 베이퍼맥스 EVO를 만나보세요.</p>
+                </div>
+            </div>
+
+            <div>
+                <div>
+                    <img src="../image_lee/index_image/index_main_product03.jpg" alt="" class="main-image">
+                </div>
+                <div style="text-align: center;">
+                    <h1>조던 MA2</h1>
+                    <p>최상의 편안함과 감각적인 스타일의 조던 MA2를 만나보세요.</p>
+                </div>
+            </div>
+
+            <div>
+                <h2>Style Magazine</h2>
+                <a href="#" class="style-magazine"><img src="../image_lee/index_image/index_spring_swipper_01.jpg"
+                        alt="" class="style-magazine-image"></a>
+                <a href="#" class="style-magazine"><img src="../image_lee/index_image/index_spring_swipper_03.jpg"
+                        alt="" class="style-magazine-image"></a>
+                <a href="#" class="style-magazine"><img src="../image_lee/index_image/index_spring_swipper_07.jpg"
+                        alt="" class="style-magazine-image"></a>
+
+                <div style="text-align: center;">
+                    <h1>스프링 재킷 스타일</h1>
+                    <p>봄을 위한 여성들의 재킷 제품들과 함께 레이어드룩을 완성해보세요.</p>
+                </div>
+            </div>
+            <div>
+                <div>
+                    <img src="../image_lee/index_image/index_main_product04.jpg" alt="" class="main-image">
+                </div>
+                <div style="text-align: center;">
+                    <h1>나이키 에어맥스 비바</h1>
+                    <p>에어맥스 유닛과 아이코닉한 디자인의 비바와 함께<br>시선을 압도하는 세련된 스타일을 연출해보세요.</p>
+                </div>
+            </div>
+
+            <div>
+                <h2>Trending Now</h2>
+                <a href="#" class="trending-now"><img src="../image_lee/index_image/index_product_item06.jpg" alt=""
+                        class="trending-now-image"></a>
+                <a href="#" class="trending-now"><img src="../image_lee/index_image/index_product_item07.jpg" alt=""
+                        class="trending-now-image"></a>
+            </div>
+            <div class="row">
+                <h2>Featured Shoes</h2>
+                <div class="col-sm-6">
+                    <div class="card ">
+                        <img src="../image_lee/index_image/index_product_item02.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">나이키 데이브레이크</h5>
+                            <p class="card-text">여성 신발 라이프스타일</p>
+                            <p class="card-text">119,000원</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="card">
+                        <img src="../image_lee/index_image/index_product_item12.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">나이키 에어맥스 97</h5>
+                            <p class="card-text">남성 신발 라이프스타일</p>
+                            <p class="card-text">199,000원</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="card">
+                        <img src="../image_lee/index_image/index_product_item13.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">나이키 코트 레거시</h5>
+                            <p class="card-text">여성 뮬</p>
+                            <p class="card-text">69,000원</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="card">
+                        <img src="../image_lee/index_image/index_product_item14.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">나이키 줌X인빈서블 런 플라이니트</h5>
+                            <p class="card-text">여성 신발 러닝</p>
+                            <a href="#" class="btn btn-primary">199,000원</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <h2>Apparel Essentials</h2>
+               <a href="#" class="apparel-essentials"><img src="../image_lee/index_image/index_product_last01.JPG" alt="" class="apparel-essentials-image"></a>
+               <a href="#" class="apparel-essentials"><img src="../image_lee/index_image/index_product_last02.JPG" alt="" class="apparel-essentials-image"></a>
+               <a href="#" class="apparel-essentials"><img src="../image_lee/index_image/index_product_last03.JPG" alt="" class="apparel-essentials-image"></a>
+            </div>
+
+        </article>
+        <footer style="height: 150px; background-color: grey;">
+
+        </footer>
+    </div>
 </body>
+
 </html>
