--- a/index.html
+++ b/index.html
@@ -11,16 +11,14 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../css_lee/index.css" type="text/css">
-    <script src="../js_lee/index.js"></script>
-    <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
-    <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+    <link rel="stylesheet" href="./css_lee/index.css" type="text/css">
+    <script src="./js_lee/index.js"></script>
 </head>
 
 <body onload="loaded()">
     <div id="container">
         <header>
-            <a href="#"><img id="jordon_logo" src="../image_lee/index_icon/index_jordon.png" alt="jordon"></a>
+            <a href="#"><img id="jordon_logo" src="./image_lee/index_icon/index_jordon.png" alt="jordon"></a>
             <ul>
                 <li><a href="#">고객센터</a></li>|
                 <li><a href="#">멤버 가입</aa>
@@ -29,7 +27,7 @@
             </ul>
         </header>
         <nav>
-            <a href="#"><img id="nike_logo" src="../image_lee/index_icon/index_nike_logo.png" alt="nike"></a>
+            <a href="#"><img id="nike_logo" src="./image_lee/index_icon/index_nike_logo.png" alt="nike"></a>
 
             <ul>
                 <li><a href="#">New Releases</a></li>
@@ -40,11 +38,11 @@
             </ul>
             <a href="#">
                 <span style="background-color: gray; width: 100px; display: inline-block;">
-                    <img class="icon" src="../image_lee/index_icon/index_search_icon.png" alt="search">
+                    <img class="icon" src="./image_lee/index_icon/index_search_icon.png" alt="search">
                 </span>
             </a>
-            <a href="#"><img src="../image_lee/index_icon/index_favorite_icon.png" alt="favorite" class="icon"></a>
-            <a href="#"><img src="../image_lee/index_icon/index_briefcase_icon.png" alt="basket" class="icon"></a>
+            <a href="#"><img src="./image_lee/index_icon/index_favorite_icon.png" alt="favorite" class="icon"></a>
+            <a href="#"><img src="./image_lee/index_icon/index_briefcase_icon.png" alt="basket" class="icon"></a>
         </nav>
         <div id="navigationFlow">
             
@@ -70,31 +68,31 @@
                                 aria-label="Slide 7"></button>
                         </div>
                         <div class="carousel-item active" data-bs-interval="3000">
-                            <img src="../image_lee/index_image/index_nike_nss_swipper_01.jpg" class="d-block w-100"
+                            <img src="./image_lee/index_image/index_nike_nss_swipper_01.jpg" class="d-block w-100"
                                 alt="...">
                         </div>
                         <div class="carousel-item" data-bs-interval="3000">
-                            <img src="../image_lee/index_image/index_nike_nss_swipper_02.jpg" class="d-block w-100"
+                            <img src="./image_lee/index_image/index_nike_nss_swipper_02.jpg" class="d-block w-100"
                                 alt="...">
                         </div>
                         <div class="carousel-item" data-bs-interval="3000">
-                            <img src="../image_lee/index_image/index_nike_nss_swipper_03.jpg" class="d-block w-100"
+                            <img src="./image_lee/index_image/index_nike_nss_swipper_03.jpg" class="d-block w-100"
                                 alt="...">
                         </div>
                         <div class="carousel-item" data-bs-interval="3000">
-                            <img src="../image_lee/index_image/index_nike_nss_swipper_04.jpg" class="d-block w-100"
+                            <img src="./image_lee/index_image/index_nike_nss_swipper_04.jpg" class="d-block w-100"
                                 alt="...">
                         </div>
                         <div class="carousel-item" data-bs-interval="3000">
-                            <img src="../image_lee/index_image/index_nike_nss_swipper_05.jpg" class="d-block w-100"
+                            <img src="./image_lee/index_image/index_nike_nss_swipper_05.jpg" class="d-block w-100"
                                 alt="...">
                         </div>
                         <div class="carousel-item" data-bs-interval="3000">
-                            <img src="../image_lee/index_image/index_nike_nss_swipper_06.jpg" class="d-block w-100"
+                            <img src="./image_lee/index_image/index_nike_nss_swipper_06.jpg" class="d-block w-100"
                                 alt="...">
                         </div>
                         <div class="carousel-item" data-bs-interval="3000">
-                            <img src="../image_lee/index_image/index_nike_nss_swipper_07.jpg" class="d-block w-100"
+                            <img src="./image_lee/index_image/index_nike_nss_swipper_07.jpg" class="d-block w-100"
                                 alt="...">
                         </div>
                     </div>
@@ -113,7 +111,7 @@
             <div>
                 <h2>2021 S/S Season Best</h2>
                 <div>
-                    <img src="../image_lee/index_image/index_main_product02.jpg" alt="" class="main-image">
+                    <img src="./image_lee/index_image/index_main_product02.jpg" alt="" class="main-image">
                 </div>
                 <div style="text-align: center;">
                     <h1>나이키 에어 베이퍼맥스 EVO</h1>
@@ -123,7 +121,7 @@
 
             <div>
                 <div>
-                    <img src="../image_lee/index_image/index_main_product03.jpg" alt="" class="main-image">
+                    <img src="./image_lee/index_image/index_main_product03.jpg" alt="" class="main-image">
                 </div>
                 <div style="text-align: center;">
                     <h1>조던 MA2</h1>
@@ -133,11 +131,11 @@
 
             <div>
                 <h2>Style Magazine</h2>
-                <a href="#" class="style-magazine"><img src="../image_lee/index_image/index_spring_swipper_01.jpg"
+                <a href="#" class="style-magazine"><img src="./image_lee/index_image/index_spring_swipper_01.jpg"
                         alt="" class="style-magazine-image"></a>
-                <a href="#" class="style-magazine"><img src="../image_lee/index_image/index_spring_swipper_03.jpg"
+                <a href="#" class="style-magazine"><img src="./image_lee/index_image/index_spring_swipper_03.jpg"
                         alt="" class="style-magazine-image"></a>
-                <a href="#" class="style-magazine"><img src="../image_lee/index_image/index_spring_swipper_07.jpg"
+                <a href="#" class="style-magazine"><img src="./image_lee/index_image/index_spring_swipper_07.jpg"
                         alt="" class="style-magazine-image"></a>
 
                 <div style="text-align: center;">
@@ -147,7 +145,7 @@
             </div>
             <div>
                 <div>
-                    <img src="../image_lee/index_image/index_main_product04.jpg" alt="" class="main-image">
+                    <img src="./image_lee/index_image/index_main_product04.jpg" alt="" class="main-image">
                 </div>
                 <div style="text-align: center;">
                     <h1>나이키 에어맥스 비바</h1>
@@ -157,16 +155,16 @@
 
             <div>
                 <h2>Trending Now</h2>
-                <a href="#" class="trending-now"><img src="../image_lee/index_image/index_product_item06.jpg" alt=""
+                <a href="#" class="trending-now"><img src="./image_lee/index_image/index_product_item06.jpg" alt=""
                         class="trending-now-image"></a>
-                <a href="#" class="trending-now"><img src="../image_lee/index_image/index_product_item07.jpg" alt=""
+                <a href="#" class="trending-now"><img src="./image_lee/index_image/index_product_item07.jpg" alt=""
                         class="trending-now-image"></a>
             </div>
             <div class="row">
                 <h2>Featured Shoes</h2>
                 <div class="col-sm-6">
                     <div class="card ">
-                        <img src="../image_lee/index_image/index_product_item02.jpg" class="card-img-top" alt="...">
+                        <img src="./image_lee/index_image/index_product_item02.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">나이키 데이브레이크</h5>
                             <p class="card-text">여성 신발 라이프스타일</p>
@@ -176,7 +174,7 @@
                 </div>
                 <div class="col-sm-6">
                     <div class="card">
-                        <img src="../image_lee/index_image/index_product_item12.jpg" class="card-img-top" alt="...">
+                        <img src="./image_lee/index_image/index_product_item12.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">나이키 에어맥스 97</h5>
                             <p class="card-text">남성 신발 라이프스타일</p>
@@ -186,7 +184,7 @@
                 </div>
                 <div class="col-sm-6">
                     <div class="card">
-                        <img src="../image_lee/index_image/index_product_item13.jpg" class="card-img-top" alt="...">
+                        <img src="./image_lee/index_image/index_product_item13.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">나이키 코트 레거시</h5>
                             <p class="card-text">여성 뮬</p>
@@ -196,7 +194,7 @@
                 </div>
                 <div class="col-sm-6">
                     <div class="card">
-                        <img src="../image_lee/index_image/index_product_item14.jpg" class="card-img-top" alt="...">
+                        <img src="./image_lee/index_image/index_product_item14.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">나이키 줌X인빈서블 런 플라이니트</h5>
                             <p class="card-text">여성 신발 러닝</p>
@@ -208,9 +206,9 @@
 
             <div class="row">
                 <h2>Apparel Essentials</h2>
-               <a href="#" class="apparel-essentials"><img src="../image_lee/index_image/index_product_last01.JPG" alt="" class="apparel-essentials-image"></a>
-               <a href="#" class="apparel-essentials"><img src="../image_lee/index_image/index_product_last02.JPG" alt="" class="apparel-essentials-image"></a>
-               <a href="#" class="apparel-essentials"><img src="../image_lee/index_image/index_product_last03.JPG" alt="" class="apparel-essentials-image"></a>
+               <a href="#" class="apparel-essentials"><img src="./image_lee/index_image/index_product_last01.JPG" alt="" class="apparel-essentials-image"></a>
+               <a href="#" class="apparel-essentials"><img src="./image_lee/index_image/index_product_last02.JPG" alt="" class="apparel-essentials-image"></a>
+               <a href="#" class="apparel-essentials"><img src="./image_lee/index_image/index_product_last03.JPG" alt="" class="apparel-essentials-image"></a>
             </div>
 
         </article>
