지도 api 구현 진행중,,,일단 멈춤

--- a/NikeMen_index.html
+++ b/NikeMen_index.html
@@ -143,7 +143,7 @@
     <footer>
         <div id="footer01">
             <ul class="footer01_ul01">
-                <li><a href="#">매장안내</a></li>
+                <li><a href="NikeMap.html">매장안내</a></li>
                 <li><a href="#">나이키 트레이닝 가이드</a></li>
                 <li><a href="#">로그인</a></li>
                 <li><a href="#">멤버 가입</a></li>
