슬라이드 메뉴 작업 진행중

--- a/NikeMen_index.html
+++ b/NikeMen_index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>나이키 남성</title>
 
+    <!-- JQuery 적용 -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <!-- CSS 스타일 적용 -->
     <link rel="stylesheet" href="./css_hong/NikeMen.css">
 </head>
 <body>
@@ -17,6 +20,15 @@
     </div>
     
     <header>
+        <div>
+            <ul class="header-bottom-nav">
+                <li><a href="intro.html">대공원소개</a></li>
+                <li><a href="guid.html">이용안내</a></li>
+                <li><a href="map.html">대공원지도</a></li>
+                <li><a href="contect.html">참여/알림</a></li>
+                <li><a href="question.html">문의하기</a></li>
+            </ul>
+        </div>
         <div><a href="">Men</a></div>
         <div><h2>Men's 의류</h2></div>
     </header>
