슬라이드 메뉴 기본구현...사실상 그냥 복붙

--- a/NikeMen_index.html
+++ b/NikeMen_index.html
@@ -10,6 +10,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <!-- CSS 스타일 적용 -->
     <link rel="stylesheet" href="./css_hong/NikeMen.css">
+    <!-- JS 적용 -->
+    <script src="./js_hong/NikeMen.js"></script>
 </head>
 <body>
 
@@ -21,14 +23,45 @@
     
     <header>
         <div>
-            <ul class="header-bottom-nav">
-                <li><a href="intro.html">대공원소개</a></li>
-                <li><a href="guid.html">이용안내</a></li>
-                <li><a href="map.html">대공원지도</a></li>
-                <li><a href="contect.html">참여/알림</a></li>
-                <li><a href="question.html">문의하기</a></li>
+            <ul class="header-bottom-nav">                
+                <li><a href="#" style="margin-left: 30px;">Men</a></li>
+                <li><a href="#">Women</a></li>
+                <li><a href="#" style="margin-left: 20px;">Kids</a></li>
+                <li><a href="#">Sale</a></li>
             </ul>
         </div>
+        <section class="header-bottom-nav-sub-menu-container">
+            <div class="header-bottom-nav-sub-menu-bg">
+                <ul class="header-bottom-nav-sub-menu1" id="header-bottom-nav-sub-menu">
+                    <li><a href="#">신발 전체</a></li>
+                    <li><a href="#">라이프스타일</a></li>
+                    <li><a href="#">러닝</a></li>
+                    <li><a href="#">농구</a></li>
+                    <li><a href="#">조던</a></li>
+                </ul>
+                <ul class="header-bottom-nav-sub-menu2" id="header-bottom-nav-sub-menu">
+                    <li><a href="#">의류 전체</a></li>
+                    <li><a href="#">후디 & 크루</a></li>
+                    <li><a href="#">팬츠 & 타이츠</a></li>
+                    <li><a href="#">숏 팬츠</a></li>
+                    <li><a href="#">양말</a></li>
+                </ul>	
+                <ul class="header-bottom-nav-sub-menu3" id="header-bottom-nav-sub-menu">
+                    <li><a href="#">러닝</a></li>
+                    <li><a href="#">트레이닝 & 짐</a></li>
+                    <li><a href="#">농구</a></li>
+                    <li><a href="#">축구</a></li>
+                    <li><a href="#">골프</a></li>
+                </ul>	
+                <ul class="header-bottom-nav-sub-menu4" id="header-bottom-nav-sub-menu">
+                    <li><a href="#">Nike Sportswear</a></li>
+                    <li><a href="#">NikeLab</a></li>
+                    <li><a href="#">Jordan</a></li>
+                    <li><a href="#">NBA</a></li>
+                    <li><a href="#">ACG</a></li>
+                </ul>
+            </div>		
+        </section>
         <div><a href="">Men</a></div>
         <div><h2>Men's 의류</h2></div>
     </header>
