디자인 조금더추가

--- a/NikeMen_index.html
+++ b/NikeMen_index.html
@@ -25,6 +25,12 @@
         </ul>
     </div>
     
+    <div class="heartBag">
+        <img src="./image_hong/icon_heart.png" id="heart" >
+        <img src="./image_hong/icon_bag.png" id="bag">
+
+    </div>
+
     <header>
         <div>            
             <ul class="header-bottom-nav">                
