헤더 부분 다시 작업 전 커밋

--- a/NikeMen_index.html
+++ b/NikeMen_index.html
@@ -27,14 +27,16 @@
     </div>
 
     <div id="icon_set">
-        <img class="icon" src="./image_hong/icon_search.png" alt="">
+        <img class="icon" id="icon_search" src="./image_hong/icon_search.png" alt="">
         <input type="text" placeholder="검색">
-        <img class="icon" src="./image_hong/icon_favor.png" alt="">
-        <img class="icon" src="./image_hong/icon_bag.png" alt="">
+        <img class="icon" id="icon_favor" src="./image_hong/icon_favor.png" alt="">
+        <img class="icon" id="icon_bag" src="./image_hong/icon_bag.png" alt="">
+        <img class="icon" id="icon_hamburger" src="./image_hong/icon_hamburger.png" alt="">
     </div>
     
     <header>
-        <div>            
+        <div id="main_menu">            
+            <!-- <img id="logo" src="./image_hong/nike_logo.png" alt="nike_logo"> -->
             <ul class="header-bottom-nav">                
                 <li><a href="#" style="margin-left: 30px;">Men</a></li>
                 <li><a href="#">Women</a></li>
@@ -225,11 +227,11 @@
             </ul>
 
             <ul class="footer01_ul">
-                <li>SOCIAL</li>
-                <li><a href="#">트위터</a></li>
-                <li><a href="#">페이스북</a></li>
-                <li><a href="#">유튜브</a></li>
-                <li><a href="#">인스타그램</a></li>
+                <li>SOCIAL</li>                
+                <li class="li_social"><a href="#"><img class="icon_social" src="./image_hong/icon_twitter.png" alt=""></a></li>
+                <li class="li_social"><a href="#"><img class="icon_social" src="./image_hong/icon_facebook.png" alt=""></a></li>
+                <li class="li_social"><a href="#"><img class="icon_social" src="./image_hong/icon_youtube.png" alt=""></a></li>
+                <li class="li_social"><a href="#"><img class="icon_social" src="./image_hong/icon_instagram.png" alt=""></a></li>
             </ul>            
         </div>
 
