--- a/new.html
+++ b/new.html
@@ -13,6 +13,13 @@
         <link rel="stylesheet" href="./css_ma/mobile_new.css" media="(max-width:900px)">
         <!-- 테블릿,데스크탑 -->
          <link rel="stylesheet" href="./css_ma/new.css" media="(min-width:900px)">
+
+
+         <!-- JQuery 적용 -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+         <!-- JS 적용 -->
+    <script src="./js_ma/new.js"></script>
     
     
 </head>
@@ -37,12 +44,45 @@
                     <img src="./image_ma/nikelogo.png" alt="" style="width: 84px; height: 60px; ">
                 </div>
                 <nav>
-                    <ul>
+                    <ul class="gnb">
                         <li><a href="#">New Releases</a> </li>
                         <li><a href="#">Men</a></li>
                         <li><a href="#">Women</a></li>
                         <li><a href="#">Kids</a></li>
                     </ul>
+                    <div class="header-bottom-nav-sub-menu-container">
+                        <div class="mega_ul">
+                            <ul class="mega">
+                                <li><a href="#">신발 전체</a></li>
+                                <li><a href="#">라이프스타일</a></li>
+                                <li><a href="#">러닝</a></li>
+                                <li><a href="#">농구</a></li>
+                                <li><a href="#">조던</a></li>
+                            </ul>
+                            <ul class="mega">
+                                <li><a href="#">의류 전체</a></li>
+                                <li><a href="#">후디 & 크루</a></li>
+                                <li><a href="#">팬츠 & 타이츠</a></li>
+                                <li><a href="#">숏 팬츠</a></li>
+                                <li><a href="#">양말</a></li>
+                            </ul>	
+                            <ul class="mega">
+                                <li><a href="#">러닝</a></li>
+                                <li><a href="#">트레이닝 & 짐</a></li>
+                                <li><a href="#">농구</a></li>
+                                <li><a href="#">축구</a></li>
+                                <li><a href="#">골프</a></li>
+                            </ul>	
+                            <ul class="mega">
+                                <li><a href="#">Nike Sportswear</a></li>
+                                <li><a href="#">NikeLab</a></li>
+                                <li><a href="#">Jordan</a></li>
+                                <li><a href="#">NBA</a></li>
+                                <li><a href="#">ACG</a></li>
+                            </ul>
+                        </div>		
+                    </section> 
+
                 </nav>
                 <div id="text_icon_box">
                    <div id="search_box">
