forthTried_made_NotificationPage

--- a/women.html
+++ b/women.html
@@ -26,6 +26,7 @@
                 <img src="./image/jordon_logo.png" id="jordonIcon">
         
                 <ul class="topMenu">
+                    <li> <a href="./notify.html" target="_blank" id="notify"> 공지사항 | </a></li>
                     <li>고객센터 | </li>
                     <li> 멤버 가입 | </li>
                     <li> 로그인</li>
