--- a/index.html
+++ b/index.html
@@ -5,15 +5,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="shortcut icon" type="image⁄x-icon" href="./image_lee/index_icon/logo_nike_title.jpg">
+    <title>나이키. Just Do it. Nike.com</title>
+
+    <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
         crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="./css_lee/index.css" type="text/css" media="(min-width:961px)">
-        <link rel="stylesheet" href="./css_lee/index_tablet.css" type="text/css" media="(max-width:960px)">
-        <link rel="stylesheet" href="./css_lee/index_mobile.css" type="text/css" media="(max-width:640px)">
+
+    <!-- responsible -->
+    <link rel="stylesheet" href="./css_lee/index.css" type="text/css" media="(min-width:961px)">
+    <link rel="stylesheet" href="./css_lee/index_tablet.css" type="text/css" media="(max-width:960px)">
+    <link rel="stylesheet" href="./css_lee/index_mobile.css" type="text/css" media="(max-width:640px)">
+
+    <!-- script -->
     <script src="./js_lee/index.js"></script>
 </head>
 
@@ -83,6 +90,8 @@
                 <div id="carouselFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
                     <div class="carousel-inner" style="position: relative; background-color: black;">
                         <div class="carousel-indicators none_tablet">
+
+                            <!-- 캐러셀 하단 버튼 -->
                             <button type="button" data-bs-target="#carouselFade" data-bs-slide-to="0" class="active"
                                 aria-current="true" aria-label="Slide 1"></button>
                             <button type="button" data-bs-target="#carouselFade" data-bs-slide-to="1"
@@ -98,6 +107,8 @@
                             <button type="button" data-bs-target="#carouselFade" data-bs-slide-to="6"
                                 aria-label="Slide 7"></button>
                         </div>
+
+                        <!-- 캐러셀 아이템 -->
                         <div class="carousel-item active" data-bs-interval="3000">
                             <img src="./image_lee/index_image/index_nike_nss_swipper_01.jpg" class="d-block w-100"
                                 alt="...">
@@ -156,6 +167,8 @@
                             </div>
                         </div>
                     </div>
+
+                    <!-- prev, next 슬라이드 버튼 -->
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselFade"
                         data-bs-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -175,11 +188,13 @@
                 <h4 id="season_best" class="none_mobile"> 2021 S/S Season Best</h4>
                 <div>
                     <img src="./image_lee/index_image/index_main_product02.jpg" alt="" class="main-image none_mobile">
-                    <img src="./image_lee/index_image/index_mobile_01.jpg" alt="" class="main-image none_mobile only_mobile">
+                    <img src="./image_lee/index_image/index_mobile_01.jpg" alt=""
+                        class="main-image none_mobile only_mobile">
                 </div>
                 <div class="explanation_container">
                     <h1>나이키 에어 <br class="only_mobile"> 베이퍼맥스 EVO</h1>
-                    <p class="product_explanation">클래식한 에어맥스 시리즈를 <br class="only_mobile">리믹스하여 <br class="none_mobile">더욱 볼드해진 <br class="only_mobile"> 나이키 에어 베이퍼맥스 EVO를 만나보세요.</p>
+                    <p class="product_explanation">클래식한 에어맥스 시리즈를 <br class="only_mobile">리믹스하여 <br
+                            class="none_mobile">더욱 볼드해진 <br class="only_mobile"> 나이키 에어 베이퍼맥스 EVO를 만나보세요.</p>
                     <a href="#" class="sale_button">구매하기</a>
                 </div>
             </div>
@@ -204,15 +219,19 @@
             <div>
                 <h4>Style Magazine</h4>
                 <div id="style-magazine">
-                    <video autoplay="autoplay" muted="muted" loop="loop" -webkit-playsinline="-webkit-playsinline" playsinline="playsinline" class="only_mobile">
+                    <video autoplay="autoplay" muted="muted" loop="loop" -webkit-playsinline="-webkit-playsinline"
+                        playsinline="playsinline" class="only_mobile" style="width: 100%;">
                         <source src="./video_lee/index_mobile_03.mp4">
                     </video>
-                    <a href="#" class="style-magazine none_mobile"><img src="./image_lee/index_image/index_spring_swipper_01.jpg"
-                            alt="" class="style-magazine-image"></a>
-                    <a href="#" class="style-magazine none_mobile"><img src="./image_lee/index_image/index_spring_swipper_03.jpg"
-                            alt="" class="style-magazine-image"></a>
-                    <a href="#" class="style-magazine none_mobile"><img src="./image_lee/index_image/index_spring_swipper_07.jpg"
-                            alt="" class="style-magazine-image"></a>
+                    <a href="#" class="style-magazine none_mobile"><img
+                            src="./image_lee/index_image/index_spring_swipper_01.jpg" alt=""
+                            class="style-magazine-image"></a>
+                    <a href="#" class="style-magazine none_mobile"><img
+                            src="./image_lee/index_image/index_spring_swipper_03.jpg" alt=""
+                            class="style-magazine-image"></a>
+                    <a href="#" class="style-magazine none_mobile"><img
+                            src="./image_lee/index_image/index_spring_swipper_07.jpg" alt=""
+                            class="style-magazine-image"></a>
                 </div>
 
                 <div class="explanation_container">
@@ -233,7 +252,8 @@
                 </div>
                 <div class="explanation_container">
                     <h1>나이키 에어맥스 비바</h1>
-                    <p class="product_explanation">맥스 에어 유닛과 아이코닉한 디자인의 <br class="only_mobile"> 비바와 함께<br class="none_mobile">시선을 압도하는 <br class="only_mobile"> 세련된 스타일을 연출해보세요.</p>
+                    <p class="product_explanation">맥스 에어 유닛과 아이코닉한 디자인의 <br class="only_mobile"> 비바와 함께<br
+                            class="none_mobile">시선을 압도하는 <br class="only_mobile"> 세련된 스타일을 연출해보세요.</p>
                     <a href="#" class="sale_button">구매하기</a>
                 </div>
             </div>
@@ -395,7 +415,7 @@
                 <div>
                     <ul>
                         <li><a href="#">주문배송</a></li>
-                        <li><a href="#">매장안내</a></li>
+                        <li><a href="./store.html">매장안내</a></li>
                         <li><a href="#">나이키 트레이닝 가이드</a></li>
                         <li><a href="#">로그인</a></li>
                         <li><a href="#">멤버 가입</a></li>
@@ -408,17 +428,17 @@
                         <li><a href="#">주문배송조회</a></li>
                         <li><a href="#">멤버쉽 혜택/서비스</a></li>
                         <li><a href="#">공지사항</a></li>
-                        <li><a href="#">1:1 채팅 문의</a></li>
+                        <li><a href="./board_lee.html">1:1 문의</a></li>
                         <li><a href="#">1:1 이메일 문의</a></li>
                         <li><a href="#">이용약관</a></li>
                         <li><a href="#">개인정보처리방침</a></li>
                     </ul>
-    
+
                     <ul>
                         <li>ABOUT NIKE</li>
                         <li><a href="">나이키에 대하여</a></li>
                     </ul>
-    
+
                     <ul>
                         <li>SOCIAL</li>
                         <li><a href="#"><img src="./image_lee/index_icon/twitter_icon_fix.png" alt=""></a></li>
@@ -467,7 +487,8 @@
                     </div>
                 </div>
                 <div>
-                    <p>안전거래를 위해 현금 등으로 결제 시 저희 쇼핑몰에서 가입한 <br class="none_tablet"> KG 이니시스의 구매안전 서비스 (채무지급보증)을 이용하실 수 있습니다</p>
+                    <p>안전거래를 위해 현금 등으로 결제 시 저희 쇼핑몰에서 가입한 <br class="none_tablet"> KG 이니시스의 구매안전 서비스 (채무지급보증)을 이용하실 수
+                        있습니다</p>
                     <br>
                     <p>온라인디지털콘텐츠사업발전법에 의한 <a href="#">콘텐츠보호안내 자세히보기</a></p>
                 </div>
