--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
 
             <!-- 메뉴 카테고리 -->
             <ul id="main_category" class="none_tablet">
-                <li><a href="#">New Releases</a></li>
-                <li><a href="#">Men</a></li>
-                <li><a href="#">Women</a></li>
-                <li><a href="#">Kids</a></li>
+                <li><a href="./new.html">New Releases</a></li>
+                <li><a href="./NikeMen_index.html">Men</a></li>
+                <li><a href="./women.html">Women</a></li>
+                <li><a href="./kid.html">Kids</a></li>
                 <li><a href="#">Sale</a></li>
             </ul>
             <span id="option_menu_region" class="none_tablet">
