--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <!-- 메뉴 카테고리 -->
             <ul id="main_category" class="none_tablet">
                 <li><a href="./new.html">New Releases</a></li>
-                <li><a href="./NikeMen_index.html">Men</a></li>
+                <li><a href="./men.html">Men</a></li>
                 <li><a href="./women.html">Women</a></li>
                 <li><a href="./kid.html">Kids</a></li>
                 <li><a href="#">Sale</a></li>
